--- a/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
@@ -26,7 +26,6 @@
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
 
-
     <!-- Label for the color preference -->
     <string name="pref_color_label">Shape Color</string>
 
@@ -48,4 +47,10 @@
 
     <!-- Value in SharedPreferences for green color option -->
     <string name="pref_color_green_value" translatable="false">green</string>
+
+    <string name="pref_size_label">Size Multiplier</string>
+    <string name="pref_size_default" translatable="false">1</string>
+    <string name="pref_size_key" translatable="false">size</string>
+
+
 </resources>
